remove more warnings